[project]
name = "fitk"
dynamic = ["version"]
description = "The Fisher Information ToolKit"
authors = [{ name = "JCGoran", email = "goran.jelic-cizmek@unige.ch" }]
license = {file = "MIT"}
readme = "README.md"

requires-python = ">=3.7,<4"
dependencies = [
    "numpy==1.21.6;python_version=='3.7'",
    "numpy>1.22;python_version>='3.8'",
    "scipy==1.7.3;python_version=='3.7'",
    "scipy>1.7.3;python_version>='3.8'",
    "matplotlib==3.5.3;python_version=='3.7'",
    "matplotlib>3.5.3;python_version>='3.8'",
]

[project.optional-dependencies]
sympy = ["sympy"]
interfaces = ["coffe", "classy", "camb"]

[project.urls]
documentation = "https://jcgoran.github.io/fitk/"
repository = "https://github.com/JCGoran/fitk/"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pylint = "*"
mypy = "*"
jupyterlab = "*"
cosmicfish = {git = "https://github.com/jcgoran/cosmicfish", rev = "feature/pip-install"}
vermin = "*"
pytest-cov = "*"
coverage = "*"
pdoc = "*"
pytest-mpl = "*"
packaging = "*"
importlib-metadata = "*"
python-lsp-server = "*"
pydocstyle = "*"

[build-system]
requires = ["setuptools", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false
