[project]
name = "fitk"
dynamic = ["version"]
description = "The Fisher Information ToolKit"
authors = [{ name = "JCGoran", email = "goran.jelic-cizmek@unige.ch" }]
license = {file = "MIT"}
readme = "README.md"

requires-python = ">=3.7,<4"
dependencies = [
    "numpy==1.21.6;python_version=='3.7'",
    "numpy>1.22;python_version>='3.8'",
    "scipy==1.7.3;python_version=='3.7'",
    "scipy>1.7.3;python_version>='3.8'",
    "matplotlib==3.5.3;python_version=='3.7'",
    "matplotlib>3.5.3;python_version>='3.8'",
    "importlib_metadata;python_version<'3.9'",
    "sympy",
]

[project.optional-dependencies]
interfaces = ["coffe", "classy", "camb"]
test = [
    "cosmicfish@git+https://github.com/jcgoran/cosmicfish@feature/pip-install",
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "coverage",
]
docs = [
    "pdoc",
    "pydocstyle",
]

[project.urls]
documentation = "https://jcgoran.github.io/fitk/"
repository = "https://github.com/JCGoran/fitk/"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"
mypy = "*"
jupyterlab = "*"
vermin = "*"
coverage = "*"
python-lsp-server = "*"
pydocstyle = "*"

[build-system]
requires = ["setuptools", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false

[tool.pytest.ini_options]
paths = ["tests", "python/fitk"]
