[project]
name = "fitk"
dynamic = ["version"]
description = "The Fisher Information ToolKit"
authors = [{ name = "JCGoran", email = "goran.jelic-cizmek@unige.ch" }]
license = {file = "MIT"}
readme = "README.md"

requires-python = ">=3.8,<4"
dependencies = [
    "numpy>1.22;python_version>='3.8'",
    "scipy>1.7.3;python_version>='3.8'",
    "matplotlib>3.5.3;python_version>='3.8'",
    "importlib_metadata;python_version<'3.9'",
    "sympy",
]

[project.optional-dependencies]
interfaces = ["coffe", "classy", "camb"]
test = [
    "cosmicfish@git+https://github.com/jcgoran/cosmicfish@feature/pip-install",
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "coverage",
]
docs = [
    "pdoc",
    "pydocstyle",
]
dev = [
    "black",
    "pylint",
    "mypy",
]

[project.urls]
documentation = "https://jcgoran.github.io/fitk/"
repository = "https://github.com/JCGoran/fitk/"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
vermin = "*"
python-lsp-server = "*"
pydocstyle = "*"

[build-system]
requires = ["setuptools", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false

[tool.pytest.ini_options]
paths = ["tests", "python/fitk"]
